RESOLVED FIXED276403
Debug assertion `ASSERT(editingRange.location != notFound)` is frequently hit in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=276403
Summary Debug assertion `ASSERT(editingRange.location != notFound)` is frequently hit...
Richard Robinson
Reported 2024-07-09 18:38:35 PDT Comment hidden (obsolete)
Attachments
Richard Robinson
Comment 1 2024-07-09 18:43:13 PDT
This is the real radar: rdar://131427649
Richard Robinson
Comment 2 2024-07-09 18:45:33 PDT
EWS
Comment 3 2024-07-10 07:17:29 PDT
Committed 280817@main (88b600d040a8): <https://commits.webkit.org/280817@main> Reviewed commits have been landed. Closing PR #30629 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.